stderr
TwelveDays.java:5: error: ';' expected
        return "On the first day of Christmas\nMy true love gave to me:\nA partridge in a pear tree."
                                                                                                     ^
1 error
